[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/EquipmentUI.gd" id="1"]

[node name="EquipmentUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 28.0
text = "Equipment"
horizontal_alignment = 1

[node name="MemberLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 28.0
offset_right = 292.0
offset_bottom = 48.0
text = "< Fae >"
horizontal_alignment = 1

[node name="WeaponLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 56.0
offset_right = 292.0
offset_bottom = 76.0
text = "> Weapon: (None)"

[node name="ArmorLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 76.0
offset_right = 292.0
offset_bottom = 96.0
text = "  Armor: (None)"

[node name="AccessoryLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 96.0
offset_right = 292.0
offset_bottom = 116.0
text = "  Accessory: (None)"

[node name="StatsLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 124.0
offset_right = 292.0
offset_bottom = 144.0
text = "ATK: 5  DEF: 3  SPD: 5"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 180.0
offset_right = 292.0
offset_bottom = 196.0
text = "Arrows: Navigate  Accept: Equip  Cancel: Close"
horizontal_alignment = 1
